--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -52,18 +52,17 @@ layout: default
             <i class="fas fa-envelope"></i>
           </a>
         </div>
-
       </div>
     </div>
 
     <div class="clearfix">{{ content }}</div>
 
     <!-- News Section -->
-    <div class="scrollable-news">  <!-- Added scrollable container here -->
+    <h2>
+      <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
+    </h2>
+    <div class="scrollable-news">  <!-- Scrollable container for news items -->
       {% if page.news and site.announcements.enabled %}
-        <h2>
-          <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
-        </h2>
         {% include news.liquid limit=false %}  <!-- Removed the limit -->
       {% endif %}
     </div>
@@ -75,7 +74,6 @@ layout: default
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
-
 
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include scripts/newsletter.liquid center=true %}
