change scrolling News

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -52,13 +52,14 @@ layout: default
             <i class="fas fa-envelope"></i>
           </a>
         </div>
+
       </div>
     </div>
 
     <div class="clearfix">{{ content }}</div>
 
     <!-- News Section -->
-    <h2>
+    <h2 style="position: sticky; top: 0; background-color: white; z-index: 100;">
       <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
     </h2>
     <div class="scrollable-news">  <!-- Scrollable container for news items -->
