change scrolling News

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -90,6 +90,7 @@ layout: default
     max-height: 250px;  /* Set the maximum height for the news section */
     overflow-y: scroll; /* Enable vertical scrolling */
     padding-right: 10px; /* Avoid overlap with scrollbar */
+    margin-bottom: 50px; /* Add margin to create space below the news section */
   }
 
   .scrollable-news::-webkit-scrollbar {
